intro de mario bros

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </div>
 <!--Fin del menu-->
 <!--Aca inicia la seccion-->
-    <div class="row">
-        <div class="col-xxl-12 col-sm-12 caja1">
+    <div class="caja1">
+      <div class="row">
 <!--Carta 1-->
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c1.jpg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">MadeWill</h3>
@@ -64,7 +64,7 @@
               <a href="#" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c2.jpg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Mi Primer Gran Paso</h3>
@@ -72,7 +72,7 @@
               <a href="videos.html" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c3.jpeg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800; font-size: 24px;">Llena Tu Vida De Color</h3>
@@ -80,7 +80,7 @@
               <a href="https://youtu.be/zlC4JRbUC7o" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c4.jpg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Santa Cosecha</h3>
@@ -88,7 +88,7 @@
               <a href="https://youtu.be/AKj7AvsZdxI?si=_XcNbiG3Lii5uDDj" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c5.jpg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Adymart</h3>
@@ -96,7 +96,7 @@
               <a href="https://youtu.be/SQMbiaYxMhw?si=W8t1PF9SKRZT94Zz" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c6.jpg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Piigu's</h3>
@@ -104,7 +104,7 @@
               <a href="https://youtu.be/cnahbzLwf88" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
+          <div class="card col-1-xl col-2-md" style="width: 20rem;">
             <img src="img/c7.jpg" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800; font-size: 22px;">Sanctumblack</h3>
@@ -112,28 +112,12 @@
               <a href="https://youtu.be/IsEiK61v6-U" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
             </div>
           </div>
-          <div class="card" style="width: 20rem;">
-            <img src="img/c8.jpg" class="card-img-top">
-            <div class="card-body">
-              <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Jumbo Express</h3>
-              <p class="card-text" style="font-size: 15px;">Vehículos modernos y confortables que ofrecen un viaje cómodo y seguro. Conductores calificados y experimentados que brindan un servicio de alta calidad.</p>
-              <a href="https://youtu.be/C81Vl_3UfIo?si=JRZ5cltI5j8jI5SY" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
-            </div>
-          </div>
-          <div class="card" style="width: 20rem;">
-            <img src="img/c9.png" class="card-img-top">
-            <div class="card-body">
-              <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Kuroe</h3>
-              <p class="card-text" style="font-size: 17px;">Diseño moderno y elegante que se adapta a cualquier ocasión. Hecha con materiales de alta calidad que durarán. Y lucir siempre a la moda.</p>
-              <a href="https://youtu.be/-AtFtGZdKVk" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
-            </div>
-          </div>
         </div>
     </div>
 <!--Termina la seccion-->
 <!--Carrusel-->
     <div class="row">
-      <div id="carouselExampleIndicators" class="carousel slide col-12">
+      <div id="carouselExampleIndicators" class="carousel slide col-12-xl col-12-md">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -171,10 +155,9 @@
       </div>
     </div> 
 <!--Fin del carrusel-->
-<div class="row">
-  <div class="col-xxl-12 col-sm-12 caja2">
-<!--Carta 1-->
-    <div class="card" style="width: 20rem;">
+<div class="row caja1">
+<!--Carta 2-->
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c10.png" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">MadeWill</h3>
@@ -182,7 +165,7 @@
         <a href="https://youtu.be/YUaKFel_Ylo?si=1DhFKvDy2w258Myi" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
-    <div class="card" style="width: 20rem;">
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c11.jpg" class="ard-img-top">
       <div class="card-body">
         <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">MadeWill</h3>
@@ -190,7 +173,7 @@
         <a href="#" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
-    <div class="card" style="width: 20rem;">
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c12.png" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title"style="font-family: fuentejunge; font-weight: 800;">Federal</h3>
@@ -198,7 +181,7 @@
         <a href="#" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
-    <div class="card" style="width: 20rem;">
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c13.png" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Toque De Dulzura</h3>
@@ -206,7 +189,7 @@
         <a href="#" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
-    <div class="card" style="width: 20rem;">
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c14.jpeg" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Choko Pops</h3>
@@ -214,7 +197,7 @@
         <a href="https://youtu.be/ghDbe4R-AEw?si=xFWlks8Jr3Zu5LmL" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
-    <div class="card" style="width: 20rem;">
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c15.png" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Un Paseo Por El Taller</h3>
@@ -222,28 +205,12 @@
         <a href="https://youtu.be/TnjJAPEJ28k" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
-    <div class="card" style="width: 20rem;">
+    <div class="card card col-1-xl col-2-md" style="width: 20rem;">
       <img src="img/c16.jpg" class="card-img-top">
       <div class="card-body">
         <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Terror en el 301</h3>
         <p class="card-text" style="font-size: 13px;">"¡Prepárate para un escalofriante viaje al aula de terror! En este espeluznante cortometraje de 1 minuto, el icónico Michael Myers se encuentra en un aula desolada junto a un grupo de personajes siniestros.<p>
         <a href="https://youtu.be/4L3GbC-QHic?si=7lo04Zkm8ZeyrpNV" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
-      </div>
-    </div>
-    <div class="card" style="width: 20rem;">
-      <img src="img/c17.png" class="card-img-top">
-      <div class="card-body">
-        <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">E&M</h3>
-        <p class="card-text" style="font-size: 17px;">Construcción profesional, con garantía de satisfacción. Diseños personalizados para satisfacer tus necesidades y estilo.</p>
-        <a href="#" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
-      </div>
-    </div>
-    <div class="card" style="width: 20rem;">
-      <img src="#" class="card-img-top">
-      <div class="card-body" >
-        <h3 class="card-title" style="font-family: fuentejunge; font-weight: 800;">Rinconcito Floral</h3>
-        <p class="card-text" style="font-size: 16px;">Una gran variedad de opciones para elegir. Expertos en el cuidado de plantas para que tengas éxito. Gran variedad de plantas.</p>
-        <a href="https://youtu.be/1cZyUL7UpH0?si=NAjkBSMFVL3PUu-L" class="btn btn-primary" target="_blank" style="font-family: cute; font-size: 25px; background-color: blueviolet; border: none;">Click Para Ver</a>
       </div>
     </div>
   </div>
