--- a/ventas.html
+++ b/ventas.html
@@ -12,46 +12,46 @@
 <body>
   
 <!--Menu desplegable-->
-<div class="container-fluid">
-  <div class="row">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-              <img src="img/logoLetras.png" height="80rem">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                  <a class="boton" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    CATEGORIAS
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="index.html">
+                    <img src="img/logoLetras.png" height="80rem">
                   </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="ventas.html">Ventas</a></li>
-                    <li><a class="dropdown-item" href="servicios.html">Servicios</a></li>
-                    <li><a class="dropdown-item" href="entretenimiento.html">Entretenimiento</a></li>
-                  </ul>
-                </li>
-                <nav class="navbar bg-body-tertiary">
-                  <form class="container-fluid">
-                    <div class="input-group">
-                      <span class="input-group-text" id="basic-addon1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                        </svg>
-                      </span>
-                      <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
-                    </div>
-                  </form>
-                </nav>
-              </ul>
-            </div>
-          </div>
-        </nav>
-  </div>
-</div>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item dropdown">
+                        <a class="boton" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          CATEGORIAS
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="ventas.html">Ventas</a></li>
+                          <li><a class="dropdown-item" href="servicios.html">Servicios</a></li>
+                          <li><a class="dropdown-item" href="entretenimiento.html">Entretenimiento</a></li>
+                        </ul>
+                      </li>
+                      <nav class="navbar bg-body-tertiary">
+                        <form class="container-fluid">
+                          <div class="input-group">
+                            <span class="input-group-text" id="basic-addon1">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                              </svg>
+                            </span>
+                            <input type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
+                          </div>
+                        </form>
+                      </nav>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </div>
+    </div>
 <!--Fin del menu-->
 <div class="row">
   <div class="col-xxl-12 col-sm-12 caja1">
@@ -156,6 +156,7 @@
     </div>
   </div>
 </div> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <footer>
     <h5 style="font-family: cute; font-size: 35px;">Copyright © 2023 Zharick Alvarez</h5>
   </footer>
